# Traffic-Test-DRF

./: .dockerignore  .env.docker.example  .gitignore  API_EXPANSION_PRD.md  Dockerfile  LICENSE  README.md  docker-compose.monitoring.yml  docker_db.sh  entrypoint.sh  fix_integration_tests.py  grafana-django-dashboard.json  prometheus.yml  pyproject.toml  ruff.toml
apps/products/: filters.py  models.py  urls.py  views.py
apps/products/cache/: __init__.py
apps/products/cache/managers/: product_cache_manager.py
apps/products/management/commands/: create_test_users.py
apps/products/migrations/: 0001_initial.py  0002_product_products_pr_created_bce1a7_idx_and_more.py  0003_add_optimized_indexes.py
apps/products/serializers/: serialziers.py
apps/products/services/: __init__.py  enhanced_stock_service.py  optimistic_stock_service.py  stock_maintenance.py  stock_service.py
apps/products/tests/: .coveragerc  conftest.py  pytest.ini
apps/products/tests/factories/: __init__.py  product_factories.py
apps/products/tests/integration/: test_reservation_lifecycle.py  test_stock_workflows.py
apps/products/tests/unit/models/: test_product.py  test_stock.py
apps/products/tests/unit/services/: test_stock_maintenance.py  test_stock_services.py
config/: __init__.py  base.py  development.py  production.py  urls.py
config/settings/: __init__.py  stock_optimized.py  test.py
docs/: CONCURRENCY_OPTIMIZATION.md  POSTGRES_OPTIMIZATION.md
locust_test/: LOCUST_TUTORIAL.md  README.md  TROUBLESHOOTING.md  create_test_users.py  create_users_simple.py  locustfile.py  test_auth.py
results/gthread_1000_30/: GTHREAD_PERFORMANCE_ANALYSIS.md
results/optimistic_100/: PERFORMANCE_ANALYSIS_REPORT.md
results/optimistic_1000_50/: GTHREAD_PERFORMANCE_ANALYSIS.md  Locust_2025-09-29-18h34_locustfile.py_http___localhost_8882_requests.csv
results/optimistic_100_5/: Locust_2025-09-27-00h48_locustfile.py_http___localhost_8882_failures.csv  Locust_2025-09-27-00h48_locustfile.py_http___localhost_8882_requests.csv  PERFORMANCE_ANALYSIS_REPORT.md
utils/models/: abs.py
